<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/manager_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/manager_application"
        android:icon="@drawable/applied"
        android:title="@string/application" />

    <item
        android:id="@+id/manager_vendors"
        android:icon="@drawable/vendor"
        android:title="@string/vendor" />

    <item
        android:id="@+id/manager_payment"
        android:icon="@drawable/money"
        android:title="@string/payment" />

    <item
        android:id="@+id/manager_setting"
        android:icon="@drawable/ic_action_name"
        android:title="@string/setting" />

</menu>